# MySolutions_DEZoomcamp2026_DataTalks.Club

./: .gitignore  README.md
01-docker-terraform/pipeline/: .gitignore  Answers.ipynb  Dockerfile  docker-compose.yaml  ingest_data.py  main.tf  pipeline.py  pyproject.toml
02-workflow-orchestration/: README.md
03-data-warehouse/: Anwsers.ipynb  pyproject.toml
04-analytics-engineering/: homework.md  load_yellow_taxi_data.py
04-analytics-engineering/dbt-cloud-managed-repositories-dbt-cloud-70471823534439-dbt-ale-9a5a0e0def18030832400dd14166a09b380637c4/: dbt_project.yml
04-analytics-engineering/dbt-cloud-managed-repositories-dbt-cloud-70471823534439-dbt-ale-9a5a0e0def18030832400dd14166a09b380637c4/models/marts/: dim_zones.sql  schema.yml
04-analytics-engineering/dbt-cloud-managed-repositories-dbt-cloud-70471823534439-dbt-ale-9a5a0e0def18030832400dd14166a09b380637c4/models/staging/: sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04-analytics-engineering/dbt-cloud-managed-repositories-dbt-cloud-70471823534439-taxi-rides-ny95-f99e7e903be89d72d237afd01744f6d69802f9bf/: dbt_project.yml
04-analytics-engineering/dbt-cloud-managed-repositories-dbt-cloud-70471823534439-taxi-rides-ny95-f99e7e903be89d72d237afd01744f6d69802f9bf/models/marts/: schema.yml
05-data-platforms/: Answers.md
05-data-platforms/my-pipeline/: .env  .gitignore  run_prod.bat
05-data-platforms/my-pipeline/pipeline/: pipeline.yml
05-data-platforms/my-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
(+2 files in other folders)
