[project]
name = "03-data-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[gs]>=1.21.0",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow==14.0.2",
    "tqdm>=4.67.3",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "notebook>=7.5.3",
]
